<resources>
    <string name="app_name">SnTC Streamify</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_gcm_register">GcmRegister</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="search_hint">Search Streams, Notifications and Events</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>

    <string name="infistart_introduction">Crafted with &#9829; for SnTC</string>

    <string name="medium_text">We can wrap ImageView Toolbar as child of CollapsingToolbarLayout, whenever scroll event occurs the wrapped toolbar goes up  image gets diminished, pinned at the top. The size of the title gets reduced slowly. We can wrap ImageView Toolbar as child of CollapsingToolbarLayout, whenever scroll event occurs the wrapped toolbar goes up  image gets diminished, pinned at the top. The size of the title gets reduced slowly.</string>

    <string name="small_text">We can wrap ImageView Toolbar as child of CollapsingToolbarLayout, whenever scroll event occurs the wrapped toolbar goes up  image gets diminished, pinned at the top. The size of the title gets reduced slowly.

    </string>
    <string name="title_activity_stream_detail">StreamDetailActivity</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about_us">About Us</string>

    <string name="title_activity_showcase">ShowcaseActivity</string>
    <string name="search_title">Search</string>

    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="videowall_demo_name">Video Gallery</string>

    <item name="player_view" type="id" />

    <string name="title_activity_image_library">Image Gallery</string>

    <string name="title_activity_image">ImageActivity</string>
    <string name="college_name">IIT (BHU), Varanasi</string>

    <string name="instruction_news_title">NEWS</string>
    <string name="instruction_events_title">EVENTS</string>
    <string name="instruction_stream_title">STREAMS</string>
    <string name="instruction_news_subtitle">instruction</string>
    <string name="instruction_events_subtitle">instruction</string>
    <string name="instruction_stream_subtitle">instruction</string>
    <string name="notification_instruction">Get news from your subscribed streams, stay updated. You can like,
        unlike the news as you like. Cards marked with Image collection contains images and those marked with
        video collections contain Youtube videos, you can click them to watch. For suggesting us the news you
        want please click the button at the bottom.
        \nSubscribe streams now."</string>
    <string name="events_instruction">Get details of events from your subscribed streams. Don\'t miss any of your
        favorite one. All the details from schedule to venue and authors are readily available only for you.
        Click on any of the event cards to get more insights of events. For suggesting us the events you want
        please click the button at the bottom.\nSubscribe streams now.</string>
    <string name="stream_instruction">Get your favorite streams here. Subscribe the one you like and start getting
        all the feeds from it. All the news and events from subscribed streams are instantly notified to you.
        Click on any of the stream cards to get more details of streams. For suggesting us the streams you want
        please click the button at the bottom.\nSubscribe one now.</string>

    <string name="title_activity_post">Compose</string>

    <string name="text_post">
        Suggest us anything and everything that you want us to publish
    </string>

    <!--Snackbar Text-->
    <string name="snackbar_action_settings">SETTINGS</string>
    <string name="snackbar_feedback_empty">Please write some feedback !</string>
    <string name="snackbar_feedback_success">Thanks for your feedback</string>
    <string name="snackbar_error">Error, please try again.</string>
    <string name="snackbar_cannot_reach_servers">Cannot Reach Servers</string>
    <string name="snackbar_no_content_found">No content found!</string>
    <string name="snackbar_thankyou_for_post">Thanks for your post</string>
    <string name="snackbar_specify_title_content_for_post">Please specify both Title and Content</string>
    <string name="snackbar_error_fetching_notifications">Some Error in fetching notifications.</string>
    <string name="snackbar_error_fetching_streams">Some Error in fetching streams.</string>

    <!--Author Details-->
    <string name="author_post_android_developer">Android Developer</string>
    <string name="author_post_web_developer">Web Developer</string>
    <string name="author_post_django_developer">Django Developer</string>
    <string name="author_name_shriyansh">Shriyansh Gautam</string>
    <string name="author_name_hemant">Hemant Jeengar</string>
    <string name="author_name_satya">Satya Prakash</string>
    <string name="author_name_yash">Yash Suresh Chandra</string>
    <string name="author_email_shriyansh">shriyansh.gautam.cse13@iitbhu.ac.in</string>
    <string name="author_email_yash">ysuresh.chandra.cse13@iitbhu.ac.in</string>
    <string name="author_email_hemant">hemant.jeengar.cse13@iitbhu.ac.in</string>
    <string name="author_email_satya">satya.prakash.cse13@iitbhu.ac.in</string>

    <string name="stream_subscribe">SUBSCRIBE</string>
    <string name="stream_unsubscribe">UNSUBSCRIBE</string>

    <string name="feedback_email_subject">Feedback : SnTC Streamify ver 2.0.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_get_user_details">GetUserDetails</string>

    <string name="your_details">More About You</string>
    <string name="your_branch">Your Branch</string>
    <string name="your_year">Your Year</string>
    <string name="roll">Your Roll No.</string>
    <string name="your_photo">Pick Photo (Optional)</string>
    <string name="submit">Submit</string>

    <string name="prize_title">Prizes won by you</string>

    <style name="Divider1">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">1dp</item>
        <item name="android:background">#ffffff</item>
    </style>

    <style name="Divider2">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">1dp</item>
        <item name="android:background">#7f7f7f</item>
    </style>


    <string-array name="branch_array">
        <item>Biochemical Engineering</item>
        <item>Biomedical Engineering</item>
        <item>Ceramics Engineering</item>
        <item>Chemical Engineering</item>
        <item>Civil Engineering</item>
        <item>Computer Science and Engineering</item>
        <item>Electrical Engineering</item>
        <item>Electronics Engineering</item>
        <item>Engineering Physics</item>
        <item>Industrial Chemistry</item>
        <item>Mathematics and Computing</item>
        <item>Material Science and Technology</item>
        <item>Mechanical Engineering</item>
        <item>Metallurgical Engineering</item>
        <item>Mining Engineering</item>
        <item>Pharmaceutical Engineering</item>
    </string-array>

    <string-array name="year_array">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>Earlier</item>
    </string-array>
    <string name="title_activity_user_teams">Your Teams</string>
    <string name="title_activity_register_team">Register your Team</string>

    <string-array name="events_array">
        <item>Robotron</item>
        <item>Sky Rocket</item>
        <item>RC Plane</item>
        <item>RC Car</item>
    </string-array>

    <string name="team_name">Team Name</string>
    <string name="team_leader">Team Leader Name</string>
    <string name="member2name">Member 2 Name</string>
    <string name="member3name">Member 3 Name</string>
    <string name="member4name">Member 4 Name</string>
    <string name="member5name">Member 5 Name</string>

    <string name="leader_roll">Leader\'s Roll No.</string>
    <string name="leader_email">Leader\'s Email</string>
    <string name="member2_email">Member 2 Email</string>
    <string name="member3_email">Member 3 Email</string>
    <string name="member4_email">Member 4 Email</string>

    <string-array name="member_roll_array">
        <item>Member 2 Roll no.</item>
        <item>Member 3 Roll no.</item>
        <item>Member 4 Roll no.</item>
        <item>Member 5 Roll no.</item>
    </string-array>

    <string-array name="member_array">
        <item>member_2</item>
        <item>member_3</item>
        <item>member_4</item>
        <item>member_5</item>
    </string-array>
    <string name="title_activity_choose_event">Choose an Event</string>
    <string name="title_activity_choose_number_members">Number Of Members</string>

    <string name="member2_roll">Member 2 Roll No.</string>
    <string name="member3_roll">Member 3 Roll No.</string>
    <string name="member4_roll">Member 4 Roll No.</string>
    <string name="member5_roll">Member 5 Roll No.</string>
    <string name="title_activity_get_optional_profile_pic">GetOptionalProfilePic</string>

</resources>
