<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ColorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterTeam"
    tools:showIn="@layout/activity_register_team">

    <LinearLayout
        android:id="@+id/register_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            custom:errorTextAppearance="@style/error_appearance"
            custom:hintTextAppearance="@style/EditTextHint">

            <EditText
                android:id="@+id/team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:hint="@string/team_name"
                android:maxLines="1"
                android:textColor="@color/white" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            custom:errorTextAppearance="@style/error_appearance"
            custom:hintTextAppearance="@style/EditTextHint">

            <EditText
                android:id="@+id/team_leader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:hint="@string/team_leader"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            custom:errorTextAppearance="@style/error_appearance"
            custom:hintTextAppearance="@style/EditTextHint">

            <EditText
                android:id="@+id/leader_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:backgroundTint="@color/white"
                android:ems="8"
                android:hint="@string/leader_roll"
                android:inputType="phone"
                android:maxLength="8"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            custom:errorTextAppearance="@style/error_appearance"
            custom:hintTextAppearance="@style/EditTextHint">


            <EditText
                android:id="@+id/leader_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:hint="@string/leader_email"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/white" />


        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/mem2_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem2name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:hint="@string/member2name"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem2roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:ems="8"
                    android:hint="@string/member2_roll"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mem3_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem3name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:hint="@string/member3name"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem3roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:ems="8"
                    android:hint="@string/member3_roll"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mem4_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem4name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:hint="@string/member4name"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem4roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:backgroundTint="@color/white"
                    android:ems="8"
                    android:hint="@string/member4_roll"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mem5_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem5name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:hint="@string/member5name"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                custom:errorTextAppearance="@style/error_appearance"
                custom:hintTextAppearance="@style/EditTextHint">

                <EditText
                    android:id="@+id/mem5roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:backgroundTint="@color/white"
                    android:ems="8"
                    android:hint="@string/member5_roll"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/register_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/background_light"
            android:text="Submit"
            android:textColor="@android:color/black" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>